exports[`Auth CLEAR_ACTOR action 1`] = `
Object {
  "actor": null,
  "user": Object {
    "accessToken": "fake-token-zab-xy-jarle",
    "emails": Array [
      "foo@bar.bas"
    ],
    "groups": Array [
      "EtnoLes",
      "FotoLes"
    ],
    "name": "Jarle Stabell",
    "userId": "jarle"
  }
}
`;

exports[`Auth CLEAR_USER action 1`] = `
Object {
  "actor": Object {
    "dataportenId": "jarle",
    "fn": "Jarle Stabell",
    "id": 1
  },
  "user": null
}
`;

exports[`Auth SET_USER action 1`] = `
Object {
  "actor": Object {
    "dataportenId": "jarle",
    "fn": "Jarle Stabell",
    "id": 1
  },
  "user": "TEST_USER"
}
`;

exports[`Auth creates LOAD_ACTOR_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/auth/LOAD_ACTOR"
  },
  Object {
    "result": Object {
      "dataportenId": "jarle",
      "fn": "Jarle Stabell",
      "id": 1
    },
    "type": "musit/auth/LOAD_ACTOR_SUCCESS"
  }
]
`;

exports[`Auth fail action 1`] = `
Object {
  "actor": null,
  "error": [Error: Some error here.],
  "loaded": false,
  "loading": false,
  "user": null
}
`;

exports[`Auth initial action 1`] = `
Object {
  "actor": null,
  "loaded": false,
  "loading": true,
  "user": null
}
`;

exports[`Auth no action 1`] = `
Object {
  "actor": null,
  "user": null
}
`;

exports[`Auth success action with applicationId 1`] = `
Object {
  "actor": Object {
    "applicationId": "932f8aad-5bf2-409d-8916-c91c24b31152",
    "fn": "Some fancy user",
    "id": 1
  },
  "actorId": "932f8aad-5bf2-409d-8916-c91c24b31152",
  "loaded": true,
  "loading": false,
  "user": null
}
`;

exports[`Auth success action with dataportenId 1`] = `
Object {
  "actor": Object {
    "dataportenId": "e7107fd4-4822-466f-9041-2e67095d8e2d",
    "fn": "Some fancy user",
    "id": 1
  },
  "actorId": "e7107fd4-4822-466f-9041-2e67095d8e2d",
  "loaded": true,
  "loading": false,
  "user": null
}
`;

exports[`Auth undefined action 1`] = `
Object {
  "actor": Object {
    "dataportenId": "jarle",
    "fn": "Jarle Stabell",
    "id": 1
  },
  "user": Object {
    "accessToken": "fake-token-zab-xy-jarle",
    "emails": Array [
      "foo@bar.bas"
    ],
    "groups": Array [
      "EtnoLes",
      "FotoLes"
    ],
    "name": "Jarle Stabell",
    "userId": "jarle"
  }
}
`;
